--- a/css/index.html
+++ b/css/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <!-- Cabeçalho -->
         <div class="header">
-            <h1 class="main-title">Pearl Jam</h1>
+            <h1 class="main-title">PEARL JAM</h1>
             <p class="main-paragraf">Banda de rock formada em 1990 em Seattle, Washigton</p>
         </div>
         <!-- Imagem de destaque -->
@@ -34,7 +34,7 @@
         <!-- Container de citação -->
         <div class="quotes-container">
             <blockquote>
-                Não importa quantos álbuns você venda, isso não mudará sua perspectiva sobre a música. Receber um disco de ouro não é ruim, você o desfruta por dois minutos.
+                Não importa quantos álbuns você venda, isso não mudará sua perspectiva sobre a música. <br> Receber um disco de ouro não é ruim, você o desfruta por dois minutos.
             </blockquote>
             <p>Eddie Vedder</p>
         </div>
@@ -58,25 +58,23 @@
         <!-- Segunda citação -->
         <div class="quotes-container">
             <blockquote>
-                "Freezin'
-                Rests his head on a pillow made of concrete again
-                Oh, feelin'
-                Maybe he'll see a little betters, any days <br>
-                Oh, hand out
-                Faces that he sees time again ain't that familiar
-                Oh, dark grin
-                He can't help, when he's happy, he looks insane <br>
-                Even flow, thoughts arrive like butterflies
-                Oh, he don't know, so he chases them away
-                Oh, someday yet he'll begin his life again
-                Life again, life again"
+                "Even flow, thoughts arrive like butterflies <br>
+                Oh, he don't know, so he chases them away <br>
+                Oh, someday yet he'll begin his life again <br>
+                Life again, life again <br>
+                
+                Kneelin' <br>
+                Lookin' through the paper though he doesn't know to read <br>
+                Oh, prayin' <br>
+                Now to something that has never showed him anything"
             </blockquote>
+            <p>Pearl Jam - Even Flow</p>
         </div>
-        <p>Pearl Jam - Even Flow</p>
+      
         <!-- Segunda imagem -->
         <div class="img-bold">
             <figure>
-                <img src="imagens/Eddie-Vedder-M.jpg" alt="Pearl Jam em um show">
+                <img src="imagens/Eddie-Vedder-M.jpg" width="900px" alt="Pearl Jam em um show">
                 <figcaption>Eddie Vedder comandando o Pearl Jam</figcaption>
             </figure>
         </div>
